<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/inflate_tech_view"
    android:layout_width="0dp"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:background="@drawable/purple_bg_edge_protrait"
    android:clickable="true"
    android:visibility="visible"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:id="@+id/tech_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/order_text_margin"
        android:layout_marginTop="@dimen/order_text_margin"
        android:fontFamily="@font/gumela"
        android:text="@string/tech_level"
        android:textColor="@color/order_text_white"
        android:textSize="@dimen/order_text_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tech_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/order_text_margin"
        android:fontFamily="@font/gumela"
        android:text="@string/tech_level_desc"
        android:textColor="@color/order_text_white"
        android:textSize="@dimen/order_text_extra_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tech_title"
        app:layout_constraintTop_toBottomOf="@+id/tech_title" />

    <TextView
        android:id="@+id/tech_level_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/gumela"
        android:text="@string/current_level"
        android:textColor="@color/order_text_white"
        android:textSize="@dimen/order_text_small"
        app:layout_constraintEnd_toEndOf="@+id/tech_img"
        app:layout_constraintStart_toStartOf="@+id/tech_img"
        app:layout_constraintTop_toBottomOf="@+id/tech_img" />

    <TextView
        android:id="@+id/tech_level_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/gumela"
        android:text="@string/one"
        android:textColor="@color/order_text_white"
        android:textSize="@dimen/order_text_small"
        app:layout_constraintBottom_toBottomOf="@+id/tech_level_title"
        app:layout_constraintStart_toEndOf="@+id/tech_level_title"
        app:layout_constraintTop_toTopOf="@+id/tech_level_title" />


    <TextView
        android:id="@+id/tech_error_prompt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/gumela"
        android:text="@string/tech_fault"
        android:textColor="@color/error_prompt"
        android:textSize="@dimen/order_text_small"
        android:textStyle="italic"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/tech_upgrade_btn"
        app:layout_constraintEnd_toEndOf="@+id/tech_desc"
        app:layout_constraintStart_toStartOf="@+id/tech_title" />

    <Button
        android:id="@+id/tech_upgrade_btn"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginEnd="@dimen/order_text_margin"
        android:layout_marginBottom="8dp"
        android:background="@drawable/btn_white"
        android:fontFamily="@font/gumela"
        android:text="@string/upgrade"
        android:textColor="@color/order_text"
        android:textSize="@dimen/order_text"
        app:layout_constraintBottom_toTopOf="@+id/tech_back_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tech_title" />

    <Button
        android:id="@+id/tech_back_btn"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginEnd="@dimen/order_text_margin"
        android:layout_marginBottom="16dp"
        android:background="@drawable/btn_dark_brown"
        android:fontFamily="@font/gumela"
        android:text="@string/unit_init_back_btn"
        android:textColor="@color/order_text_white"
        android:textSize="@dimen/order_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tech_title" />

    <ImageView
        android:id="@+id/tech_img"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/wand_1"
        app:layout_constraintEnd_toEndOf="@+id/tech_desc"
        app:layout_constraintStart_toStartOf="@+id/tech_title"
        app:layout_constraintTop_toBottomOf="@+id/tech_desc" />

    <TextView
        android:id="@+id/tech_level_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/gumela"
        android:text="@string/tech_bonus_example"
        android:textColor="@color/order_text_white"
        android:textSize="@dimen/order_text_extra_small"
        app:layout_constraintEnd_toEndOf="@+id/tech_img"
        app:layout_constraintStart_toStartOf="@+id/tech_img"
        app:layout_constraintTop_toBottomOf="@+id/tech_level_title" />
</androidx.constraintlayout.widget.ConstraintLayout>