<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/unit_upgrade_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/example_unit"
        android:textColor="@color/order_text_white"
        android:textStyle="italic"
        android:textSize="@dimen/order_text_small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/unit_upgrade_num"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/gumela"
        android:text="@string/zero"
        android:textColor="@color/order_text_white"
        android:textSize="@dimen/order_text_small"
        app:layout_constraintBottom_toBottomOf="@+id/unit_upgrade_name"
        app:layout_constraintEnd_toStartOf="@+id/unit_upgrade_delta"
        app:layout_constraintTop_toTopOf="@+id/unit_upgrade_name" />

    <TextView
        android:id="@+id/unit_upgrade_delta"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/gumela"
        android:text="@string/plus1"
        android:textColor="@color/order_text_white"
        android:textSize="@dimen/order_text_small"
        app:layout_constraintBottom_toBottomOf="@+id/unit_upgrade_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/unit_upgrade_name" />

</androidx.constraintlayout.widget.ConstraintLayout>